/*
 * CIOlib - Cartesian Input / Output library
 *
 * Copyright (c) 2013 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2013-11-01

 r28 Compilation on K/FX


------------------
2013-10-29

 r27 update NEWS

 r26 change compilation of tools manulally [ver 1.4.0]
  - bug fix : cio_DFI.C L.888 DFI_Finfo.TimeSliceDirFlag == ONOFF >> = ONOFF
  - Since frm(tools) works on a login node for K/FX10, separate from autotools

------------------
2013-10-12
 
 r25 update ciolib_ug.pdf

 r24 describe copyright [ver 1.3.9]

 r23 separates cio_Interval_Mngr class from cio_DFI class
  - remove cio_Interval_Mngr's methods from cio_DFI class 
  - change to protected >> normalizeBaseTime(), normalizeIntervalTime(), normalizeStartTime(), normalizeLastTime(), normalizeDelteT()
  - remove force option >> when WriteData() is called, the data is immediately written into a file
  - delete cio_Interval_Mngr.h
 
 
------------------
2013-10-10

 r22 update userguide
 
 r21 update UnitList [ver 1.3.8]
  - change format of UnitList

------------------
2013-10-02
 r20 modify for intel mpi [ver 1.3.7]
   - include mpi.h before stdio.h to suppress error message #error "SEEK_SET is #defined but must not be for the C++ binding of MPI"

------------------
2013-09-29
 r19 update REDME file

 r18 update frm & combSPH [ver 1.3.6]

------------------
2013-09-22
 r17 update ChangeLog [ver 1.3.5]
   - Function update

------------------
2013-07-20

 r16 update ChangeLog [ver 1.3.4]

 r15 update src/Makefile.am and include EXTRA_DIST = Makefile_spec

 r14 VersionInfo() >> getVersionInfo()
   - add cio_Version.h.in

 r13 change version info again

 r12 change version info, and style of ChangeLog and NEWS

------------------
2013-07-04

 r11 update ChangeLog

 r10 update INSTALL, NEWS, README

------------------
2013-06-27

 r9 update ChangeLog & NEWS [ver 1.3.3]

 r8 v 1.3.3 configure.ac    

------------------