@@ -35,17 +35,17 @@ Configure options:
  --prefix=INSTALL_DIR
     Specify a directory to be installed. The default directory is /usr/local/CIOlib.
 
- --with-mpich=MPICH_DIR
-    If you will use the MPICH library, specify the directory that MPICH library is 
-    installed. Either --with-mpich or --with-ompi option will be required except using 
-    a wrapper compiler. If the wrapper compiler, e.g., mpic++ or mpicxx is used to
-    compile, both options can be eliminated.
-
  --with-ompi=OPENMPI_DIR
-    If the OpenMPI library is used, specify the directory path.
+    If the OpenMPI library is used, specify the directory path that OpenMPI library is
+    installed. This option will be required to use a native compiler. Instead, if the 
+    wrapper compiler, e.g., mpicxx, is used to compile, this options can be eliminated.
 
  --with-parser=TEXTPARSER_PATH
     Specify the directory path that TextParser library is installed.
+
+ --without-MPI=(yes|no)
+    If you compile CIO library for parallel environment with MPI library, specify 'yes',
+    otherwise 'no'.
 
 
  CXX=CXX_COMPILER
