@@ -12,6 +12,7 @@
 SUBDIRS = @MAKE_SUB_DIRS@
 
 bin_SCRIPTS = cio-config
+CLEANFILES = $(bin_SCRIPTS)
 EXTRA_DIST = cio-config.in LICENSE tools #config_cio.sh
 dist_data_DATA = AUTHORS COPYING ChangeLog README LICENSE
 
