@@ -13,8 +13,9 @@ REVISION HISTORY
 ------------------
 2013-11-01
 
- r28 Compilation on K/FX
+ r29 expire MPICH version
 
+ r28 Compilation on K/FX
 
 ------------------
 2013-10-29
